# BluetoohLib

./: .gitignore  CMakeLists.txt  Jenkinsfile  build.sh  conanfile.py  create.sh  createInDocker.sh  createWithDocker.sh  openInClion.sh  upload.sh
profiles/: linux_gcc
src/: main.cpp
src/periperie/: bluetooth.cpp  bluetooth.hpp
test/: bluetooth_test.cpp
